@@ -12,7 +12,7 @@ import crypt
 import random
 
 import Welcome
-import PartitioningMain
+import Partitioning
 import Stage
 import PortageTree
 import MakeDotConf
@@ -40,7 +40,7 @@ class Installer:
 	install_window = None
 
 	menuItems = [ { 'text': 'Welcome', 'module': Welcome },
-                      { 'text': 'Partitioning', 'module': PartitioningMain },
+                      { 'text': 'Partitioning', 'module': Partitioning },
                       { 'text': 'Network Mounts', 'module': NetworkMounts },
                       { 'text': 'Stage', 'module': Stage },
                       { 'text': 'Portage tree', 'module': PortageTree },
