@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.106 2005/04/30 07:42:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.107 2005/04/30 23:35:51 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   30 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Add 'Format' to PartProperties
+  Add 'Format' to PartProperties. Remove craptastic split partitioning screen
+  stuff.
 
   29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Split 'custom' sync option into 'none' and 'snapshot'.
